Update scrollbar style and ensure only card are scrolls with overflow

--- a/source/presentation/demo.main.styl
+++ b/source/presentation/demo.main.styl
@@ -33,6 +33,8 @@ card-col-gap()
     --bg-cherry: $card-table-red
     --bg-twilight: $card-table-blue
     --bg-amethyst: $card-table-purple
+    --scrollbar-light: rgba($card-stock, 0.5)
+    --scrollbar-light-focus: rgba($card-stock, 0.4)
 
 html
     height: 100%
@@ -42,6 +44,7 @@ body
     height: calc(100% - 16px)
     width: calc(100% - 16px)
     margin: 8px
+    overflow: hidden
 
 footer
     display: none
@@ -58,6 +61,7 @@ footer
     display: flex
     height: 100%
     width: 100%
+    overflow: hidden
     flex-flow: column nowrap
     justify-content: space-between
     align-items: center
@@ -117,7 +121,7 @@ footer
     & .closeup
         height: 87%
         width: 100%
-        overflow-y: scroll
+        overflow: hidden auto
 
 .closeup
     & .pad
@@ -193,6 +197,7 @@ footer
     & button
         cursor: pointer
 
+
 .spade
     color: var(--spade-splash)
 .diamond
@@ -213,6 +218,7 @@ footer
     border-color: transparent
     justify-content: center
     align-items: center
+
 
 .green-dye
     background-color: var(--bg-emerald)
@@ -237,8 +243,29 @@ footer
 
 
 @media (hover: hover)
-    .turntable .turn-off:hover
-        border-color: var(--diamond-splash)
+    .pcs
+        .closeup
+            &::-webkit-scrollbar-thumb:hover
+                background-color: var(--scrollbar-light)
+
+            & .turntable .turn-off:hover
+                border-color: var(--diamond-splash)
+
+
+.pcs .closeup
+    scrollbar-width: thin
+    scrollbar-color: var(--scrollbar-light) transparent
+
+    &::-webkit-scrollbar
+      width: 9px
+
+    &::-webkit-scrollbar-track
+      background: transparent
+
+    &::-webkit-scrollbar-thumb
+      background-color: var(--scrollbar-light-focus)
+      border-radius: 10px
+      transition: background-color 0.2s ease-in-out
 
 
 @container app-shell (width < 801px)
@@ -248,13 +275,19 @@ footer
             flex-wrap: wrap
             justify-content: flex-start
             gap: 4.5px 0
-            
+
             & .ribbon
                 flex-wrap: wrap
                 gap: 4.5px
-                
+
                 & [name="bg-wells"]
                     min-height: 22px
 
-        & .closeup .pad
-            gap: card-row-gap('small') card-col-gap()
+        & .closeup
+            overflow: hidden scroll
+
+            &::-webkit-scrollbar
+              width: 12px
+
+            & .pad
+                gap: card-row-gap('small') card-col-gap()
